# aic

./: .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  RELEASING.md  cliff.toml  deny.toml  dist-workspace.toml
.github/workflows/: changelog.yml  ci.yml  release.yml  token-monitor.yml
docs/adr/: 0001-self-update-homebrew-guard.md  0002-signed-self-update.md  0003-provider-registry-and-per-provider-clients.md
docs/agents/: issue-tracker.md
keys/: zipsign.pub
scripts/: prepare-release.sh  release.sh  release_lib.sh  test_release.sh
src/: cli.rs  config.rs  generator.rs  git.rs  llm.rs  main.rs  prompt.rs  update.rs
