[package]
name = "aic"
version = "0.1.0"
edition = "2024"
description = "AI-powered git commit message generator"
repository = "https://github.com/CaicoLeung/aic"
license = "MIT"

[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
git2 = "0.20.4"
indicatif = "0.17"
rig-core = "0.36"
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
