[package]
name = "aic"
version = "0.1.4"
edition = "2024"
rust-version = "1.87"
description = "AI-powered git commit message generator"
repository = "https://github.com/CaicoLeung/aic"
keywords = ["git", "ai", "cli", "commit", "llm"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

[profile.dist]
inherits = "release"
lto = "thin" # enable link-time optimization for a smaller binary
strip = true # strip symbols for a smaller, cleaner binary
codegen-units = 1 # reduce codegen units to improve compile times

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
git2 = "0.20.4"
indicatif = "0.17"
owo-colors = "4"
rig-core = "0.36"
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
tui-banner = "0.2.3"

[dev-dependencies]
tempfile = "3"
